# data.onebiglibrary.net

./: .env.example  .gitignore  Makefile  README.md  justfile  legacy-content-migration.md  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
content/: 20140802-testing-raw-html.md  20140808-simple-color-relationships.md  20140812-things-to-know-about-data-science.md  20140904-albers-color-studies-part-2.md  20140918-animating-regression.md  20141018-animating-regression-part-2.md  20141112-animated-anscombe-quartet-regression-diagnostics.md  20141112-animated-anscombe.md
content/data/: 20141001-filecounts.json  20141007-loggins-vdi-source.csv  20141112-animating-anscombe.json
content/notebooks/.ipynb_checkpoints/: 20140725-test-notebook-checkpoint.ipynb  20140801-d3-checkpoint.ipynb
content/pages/: 20140302-about.md  20140731-colophon.md
content/posts/20140808-simple-color-relationships/: index.md
content/posts/20140812-things-to-know-about-data-science/: index.md
content/posts/20140918-animating-regression/: index.md
content/posts/20141001-years-worth-of-dots/: index.md
content/posts/20141112-animated-anscombe-quartet-regression-diagnostics/: index.md
content/posts/20260224-and-we-re-back/: index.md
content/posts/20260225-choosing-a-favicon/: index.md
content/posts/20260225-starting-a-news-service/: index.md
content/posts/20260303-formally-verifying-mrrc/: index.md
theme/static/css/: data.css
theme/templates/: analytics.html  article.html  base.html  index.html  page.html  sidebar.html  twitter_profile.html
(+1 files in other folders)
